Bug 430778 - Dolphin does not show the number of files present in a folder on NTFS partitions or hard drives
Summary: Dolphin does not show the number of files present in a folder on NTFS partiti...
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 20.12.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-12-24 09:48 UTC by Salvatore
Modified: 2021-01-16 18:22 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 20.12.2
Sentry Crash Report:


Attachments
Example (62.48 KB, image/png)
2020-12-24 09:48 UTC, Salvatore
Details
Example ext4 (55.51 KB, image/png)
2020-12-24 09:49 UTC, Salvatore
Details
ntfs partition example (61.09 KB, image/png)
2021-01-04 18:43 UTC, smow
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Salvatore 2020-12-24 09:48:25 UTC
Created attachment 134304 [details]
Example

By activating the size option in "show additional information", in version 20.08 Dolphin also showed the number of files present in the NTFS hard disk
The strange thing is that the size of the files is visible, only the number of files in a folder are not seen


Operating System: Arch Linux
Kde Applications: 20.12.0
KDE Plasma Version: 5.20.4
KDE Frameworks Version: 5.77.0
Qt Version: 5.15.2
Kernel Version: 5.9.14-arch1-1
Comment 1 Salvatore 2020-12-24 09:49:27 UTC
Created attachment 134305 [details]
Example ext4
Comment 2 Salvatore 2020-12-24 09:51:59 UTC
For completeness, this is the mounting of my NTFS partition:

UUID=0E68E1EB68E1D18F	/Dati	ntfs defaults,noatime,utf8,umask=007,uid=1000,gid=1001	0	2

I don't know if it has anything to do with this
Comment 3 smow 2021-01-04 18:43:00 UTC
Created attachment 134547 [details]
ntfs partition example

I can confirm having this issue in detailed mode on NTFS partition.

Operating System: Manjaro Linux
KDE Plasma Version: 5.20.4
KDE Frameworks Version: 5.77.0
Qt Version: 5.15.2
Kernel Version: 5.10.2-2-MANJARO
OS Type: 64-bit
Comment 4 Ilia Kats 2021-01-15 22:49:01 UTC
Git commit 3b4dae3556d9d470d68fe9836d4f68188fa20bcb by Ilia Kats.
Committed on 15/01/2021 at 20:41.
Pushed by iliakats into branch 'master'.

fix folder size calculation on FUSE and network file systems

KFileItem::isSlow uses hardcoded logic that returns true if the
filesystem is Smb or Nfs. However,
KFileSystemType::determineFileSystemTypeImpl on Linux returns Nfs also
if the file system in question is a FUSE file system, which includes
NTFS, sshfs, and others.
Related: bug 431106

M  +1    -1    src/kitemviews/kfileitemmodelrolesupdater.cpp

https://invent.kde.org/system/dolphin/commit/3b4dae3556d9d470d68fe9836d4f68188fa20bcb
Comment 5 Elvis Angelaccio 2021-01-16 18:22:00 UTC
Git commit a6d095fa0450237f89e240da99877f6c79b46ecc by Elvis Angelaccio, on behalf of Ilia Kats.
Committed on 16/01/2021 at 18:20.
Pushed by elvisangelaccio into branch 'release/20.12'.

fix folder size calculation on FUSE and network file systems

KFileItem::isSlow uses hardcoded logic that returns true if the
filesystem is Smb or Nfs. However,
KFileSystemType::determineFileSystemTypeImpl on Linux returns Nfs also
if the file system in question is a FUSE file system, which includes
NTFS, sshfs, and others.
Related: bug 431106

M  +1    -1    src/kitemviews/kfileitemmodelrolesupdater.cpp

https://invent.kde.org/system/dolphin/commit/a6d095fa0450237f89e240da99877f6c79b46ecc